tdf#170599 fix outline folding crash

When reopening Print Preview with outline folding enabled and a heading
in the first paragraph and display formatting hidden characters option
is enabled.

Effort to understand why this crash happens revealed a similar
occurrence in SwDocShell::LoadStyles_. While moving the call to
InvalidateOutlineContentVisibility in SwView ctor to before the line
having 'g_NoInterrupt = bOld' seems to avoid the crash, or my first
approach of conditionally including StartAction/EndAction through use of
a function argument, this patch uses the
comphelper::FlagRestorationGuard used in rhbz#818557, fdo#58893 fix in
SwDocShell::LoadStyles_:

  "rhbz#818557, fdo#58893: EndAllAction will call SelectShell(),
   which pushes a bunch of SfxShells that are not cleared
   (for unknown reasons) when closing the document, causing crash;
   setting g_bNoInterrupt appears to avoid the problem."

Attempts to make this crash occur in a unit test have not been
successful; therefore one is not included with this patch.

Change-Id: I993f0faef68bcb1ac6a9f38a241de48fa755a475
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/198821
Tested-by: Jenkins
Reviewed-by: Jim Raykowski <raykowj@gmail.com>